# LiteAgent

./: .gitignore  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  PLANNING.md  PROJECT_STATUS.md  README.md  interactive.py  pyproject.toml  question.py  requirements.txt  run_functional_tests.sh  run_unit_tests.sh  start_test.sh
.agents/: AGENT.md
.github/: FUNDING.yml
LiteAgent/: README.md  USAGE.md  __init__.py  agent.py  compression.py  skill.py
benchmarks/: bench_test.py  debug_test.py  demo_multi_turn.py  final_test.py  full_test.py  interactive.py  simple_multi_turn.py  verify.py  verify_compression.py
docs/: README.md  SCRIPTS_README.md  SKILL_WHITELIST_USAGE.md  design_doc.md  workplan.md
kotlin/: PROJECT_FILES.md  README.md  build.gradle.kts  build.sh  generate_local_files.sh  gradle.properties  settings.gradle.kts
kotlin/app/: build.gradle.kts  proguard-rules.pro
models/: README.md
python/: README.md  interactive.py  requirements.txt  run_functional_tests.sh
python/docs/: README.md  compression_test_design.md  design_doc.md
python/tests/: conftest.py
python/text_adventure/: README.md  agent.py
skills/echo-skill/: SKILL.md
skills/echo-text/: SKILL.md
skills/text-adventure/: SKILL.md
tests/: README.md  conftest.py  pytest.ini  run_tests.sh
tests/functional/: README.md  test_compression_flow.py  test_echo_skill.py
tests/unit/: __init__.py  test_agent.py  test_auto_compression.py  test_compression_module.py  test_context.py  (+6 more)
text_adventure/: USAGE.md  __init__.py  agent.py  compression.py  skill.py
(+94 files in other folders)
